--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"gh-pages": "^6.3.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-router": "^7.5.3",
 		"react-router-dom": "^6.22.0"
 	},
 	"devDependencies": {
